# ValorantScoreboardEnhancer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  logger.cpp  logger.h
